argocd/infra/lumo-tamer/manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: lumo-tamer
  name: lumo-tamer
spec:
  ports:
    - name: http
      port: 3003
      targetPort: 3003
  selector:
    app: lumo-tamer
