argocd/infra/lumo-tamer/manifests/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Lumo Tamer
    gethomepage.dev/icon: lumo-tamer
    gethomepage.dev/description: "Lumo Tamer is a lightweight local proxy for Proton\
      \ Lumo with an OpenAI-compatible API."
    gethomepage.dev/pod-selector: app=lumo-tamer
  name: lumo-tamer-httproute
  namespace: lumo-tamer
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: cilium-private-gateway
      namespace: cilium
      sectionName: https
  hostnames:
    - lumo-tamer.yanello.net
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: lumo-tamer
          namespace: lumo-tamer
          port: 3003
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
